2016-05-25  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: Uncaught Exception: TypeError: undefined is not an object (evaluating 'collectionData.affectedSnapshots')
        https://bugs.webkit.org/show_bug.cgi?id=158051

        Reviewed by Brian Burg.

        * UserInterface/Workers/HeapSnapshot/HeapSnapshot.js:
        (HeapSnapshot.prototype.updateDeadNodesAndGatherCollectionData):
        * UserInterface/Workers/HeapSnapshot/HeapSnapshotWorker.js:
        (HeapSnapshotWorker.prototype.createSnapshot):
        If by the time the timeout fires we had cleared our snapshot list, then
        updateDeadNodesAndGatherCollectionData could bail. Handle gracefully.

2016-05-23  Nikita Vasilyev  <nvasilyev@apple.com>

        Web Inspector: Split console navigation bar doesn't wrap as expected
        https://bugs.webkit.org/show_bug.cgi?id=157950
        <rdar://problem/26395573>

        Reviewed by Timothy Hatcher.

        * UserInterface/Views/Main.css:
        (#split-content-browser > .navigation-bar .item):
        Fix the split console and don't touch any other navigation bars.

2016-05-22  Brady Eidson  <beidson@apple.com>

        Move to C++14.
        https://bugs.webkit.org/show_bug.cgi?id=157948

        Reviewed by Michael Catanzaro.

        * Configurations/Base.xcconfig:

2016-05-21  Matt Baker  <mattbaker@apple.com>

        Web Inspector: Creating the CSSStyleDetailsSidebarPanel takes about 50ms (20%) of main load
        https://bugs.webkit.org/show_bug.cgi?id=156707
        <rdar://problem/25780404>

        Reviewed by Timothy Hatcher.

        This patch adds new View concepts, `initialLayout` and `widthDidChange`,
        making it possible for hidden views to postpone the creation of their
        UI subtree until they are shown for the first time.

        Sidebar panels get this performance improvement by virtue of SidebarPanel
        and StyleDetailsPanel, which trigger a layout when shown. This can be